--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
  <!DOCTYPE html>
  <html>
   <head>
-    <title>Byeongjun Kim</title>
+   <title>Byeongjun Kim</title>
+   <link rel="stylesheet" href="styles.css">
   </head>
   <body>
   Design Portfolio
