--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-  Design Portfolio
+   <h1>Design Portfolio</h1>
   </body>
 </html>
